fix dropdown menu z-index

--- a/lms/static/sass/_styles.scss
+++ b/lms/static/sass/_styles.scss
@@ -3,6 +3,10 @@ h1.logo {
   font-size: 1.75rem !important;
 }
 
+.header-global {
+  z-index: 101;
+}
+
 .header-global .wrapper-header {
   padding: 10px 10px;
 }
